--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,10 +30,15 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Upload GitHub Pages artifact
+      - name: Upload general build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: github-pages
+          name: build-output
+          path: ./build
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
           path: ./build
 
   deploy:
